--- a/week2/project1/index.html
+++ b/week2/project1/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div1>
-            <h1>CIA REalizes It's Been Using Black Highlighters All These Years</h1>
+            <h1>CIA Realizes It's Been Using Black Highlighters All These Years</h1>
         <h2>Director Demands Investigation</h2>
         <img src="https://i.kinja-img.com/gawker-media/image/upload/s--RNd7CQyJ--/c_fit,fl_progressive,q_80,w_470/zuzaejhbyctibbyvoz8h.jpg"/>
         </div1>
