--- a/week2/project1/index.html
+++ b/week2/project1/index.html
@@ -2,12 +2,13 @@
 <html>
     <head>
         <title>CIA </title>
+        <link href="style.css" rel="stylesheet">
     </head>
     <body>
         <div1>
             <h1>CIA Realizes It's Been Using Black Highlighters All These Years</h1>
         <h2>Director Demands Investigation</h2>
-        <img src="https://i.kinja-img.com/gawker-media/image/upload/s--RNd7CQyJ--/c_fit,fl_progressive,q_80,w_470/zuzaejhbyctibbyvoz8h.jpg"/>
+        <img Hspace="25" src="https://i.kinja-img.com/gawker-media/image/upload/s--RNd7CQyJ--/c_fit,fl_progressive,q_80,w_470/zuzaejhbyctibbyvoz8h.jpg" alt="CIA" height="300" width="300"/>
         </div1>
         <div2>
             <p>LANGLEY,VA- A report released Tuesday by the CIA's Office of the Inspector General revealed that the CIA has mistakenly obscured hundreds of thousands of pages of critical intelligence with black highliters.</p>
@@ -18,8 +19,8 @@
             <li>the civil-rights movement</li>
             <li>the growth of the international drug trade</li>
             </ul>
-            <p>You might also like</p>
-            <a href="http://www.theonion.com/articles/cia-to-shift-focus-to-greeting-cards,4312/">CIA To Shift Focus To Greeeting Cards</a>
+            <p>YOU MIGHT ALSO LIKE</p>
+            <a style="text-decoration: none;" href="http://www.theonion.com/articles/cia-to-shift-focus-to-greeting-cards,4312/">CIA To Shift Focus To Greeeting Cards</a>
         </div2>
     </body>
 </html>
